--- a/sitepage/styles.css
+++ b/sitepage/styles.css
@@ -8,7 +8,7 @@ body, h1, h2, h3, p, ul, li, header, nav, article, section, footer {
 /* 字体和背景 */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f0f2f5;
+    background-color: #fff;
     color: #333;
     line-height: 1.6;
     padding: 20px;
@@ -16,7 +16,7 @@ body {
 
 /* 页面头部 */
 header {
-    background-color: #004d99;
+    background-color: #beedc7;
     color: #fff;
     padding: 10px 20px;
     text-align: center;
@@ -25,7 +25,7 @@ header {
 /* Navigation Bar */
 nav ul {
     list-style-type: none;
-    background: #333;
+    background: #19caad;
     text-align: center;
     padding: 10px 0;
 }
@@ -42,6 +42,17 @@ nav ul li a {
 }
 
 /* 文章和段落样式 */
+.text-block {
+    background-color: #f8f6b8; /* 背景色 */
+    border: 1px solid #ccc;    /* 边框 */
+    padding: 10px;             /* 内边距 */
+    margin: auto;              /* 外边距 */
+    font-size: 16px;           /* 字体大小 */
+    color: #333;               /* 字体颜色 */
+    width: 92%;              /* 宽度 */
+}
+
+
 article {
     background-color: #ffffff;
     margin: 20px auto;
@@ -51,7 +62,7 @@ article {
 }
 
 h1, h2, h3 {
-    color: #333;
+    color: #333333;
 }
 
 /* 页脚 */
